# diskio

./: Cargo.toml  README.md  run.sh
src/: error.rs  main.rs  plot.rs  stats.rs
